# taxi-prediction-fullstack-daniela

./: README.md  pyproject.toml
data/processed/: taxi_clean_full.csv  taxi_clean_short.csv  taxi_fillednan_all_columns.csv  taxi_fillednan_dropped_columns.csv  taxi_prices_cleaned.csv
models/: taxi_price_predictor.joblib
notebooks/: 01_eda.ipynb  02_data_cleaning.ipynb  03_linear_regression.ipynb  03_manual_model_test.ipynb  03_model_experiments.ipynb  03_model_test_eval.ipynb  04_creating_pipeline.ipynb  04_pipeline_refactor.ipynb
src/taxipred/backend/: api.py  data_processing.py  dependencies.py  explore.py  responses.py  schemas.py  services.py
src/taxipred/common/: constants.py  explore.py
src/taxipred/frontend/: api_client.py  app.py  data.py  map.py  ui.py
src/taxipred/frontend/pages/: routes.py
src/taxipred/ml/: evaluate.py  pipeline.py
src/taxipred/utils/: constants.py  helpers.py  prediction.py  routing.py
