[project]
name = "taxipred"
version = "0.1.0"
description = "Prediction on taxi prices"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.53.0",
    "uvicorn>=0.40.0",
]
